# VisionPoseTracking

./: CMakeLists.txt  LICENSE  README.md  tracking.cpp
include/: camera.hpp  extractor.hpp  frame.hpp
params/: cam.yaml
src/: CMakeLists.txt  camera.cpp  extractor.cpp  frame.cpp
